tests/errors/prelude-macro-format-qualified-planned.ari
use std as core;

fn main() -> i64 {
  let text = core::format!("value={}", 1);
  let ignored = text;
  return 0;
}
